# wm-slots

./: .gitignore  README.md  pyproject.toml
docs/: background.md  first_pass_analysis.md  multi_object_analyses.md  single_object_analyses.md
notebooks/: decode_rsa.ipynb  explore_features.ipynb  explore_structure.ipynb
scripts/: analysis.py  data_access.py  download.py  extract.py
