[project]
name = "wm-slots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lindi>=0.4.6",
    "matplotlib>=3.11.0",
    "numba>=0.61",
    "numpy>=2.4.6",
    "plotly>=6.9.0",
    "pynapple>=0.11.3",
    "pynwb>=4.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "nbstripout>=0.9.1",
]
